--- a/dutch-airstrikes.html
+++ b/dutch-airstrikes.html
@@ -7,21 +7,21 @@
 
 		
 		<link href="./_app/immutable/assets/0.DIrgqM2x.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QbJ3q_9y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BT7DVw-V.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BMH2O0k5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D0wIhId0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D8JHZCSi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/fnfRM0tO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DdLVbTv1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BIrGvhn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.K0Ep7xRg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BKpeI9UX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-KRFAI0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B8zictC5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BH0EtjNa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hvg8IIsD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CV0ZPqmq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Duh_IVTx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.DEki_HWj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.C9DhPAXa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B2MO0pcQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/gAlyoUsd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/xbzeH1dN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DiWE8bWm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DM7PL9OJ.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
@@ -31,15 +31,15 @@
 			
 			<script>
 				{
-					__sveltekit_zk653v = {
+					__sveltekit_1duhzg1 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QbJ3q_9y.js"),
-						import("./_app/immutable/entry/app.K0Ep7xRg.js")
+						import("./_app/immutable/entry/start.BMH2O0k5.js"),
+						import("./_app/immutable/entry/app.BKpeI9UX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
