--- a/index.html
+++ b/index.html
@@ -7,37 +7,37 @@
 
 		
 		<link href="./_app/immutable/assets/0.DIrgqM2x.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QbJ3q_9y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BT7DVw-V.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BMH2O0k5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D0wIhId0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D8JHZCSi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/fnfRM0tO.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DdLVbTv1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BIrGvhn6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.K0Ep7xRg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BKpeI9UX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C-KRFAI0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B8zictC5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BH0EtjNa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Hvg8IIsD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CV0ZPqmq.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Duh_IVTx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DkJDrZFg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.facONhRb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/B2MO0pcQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DiWE8bWm.js">
 		<link rel="stylesheet" href="https://use.typekit.net/rsr2dmw.css" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><!----><div id="header"></div> <div class="header-bar"><div class="bar-text"><p class="main-title">Joel Schülin</p> <button class="about">Über mich <!--[!--><!--]--></button> <button class="lang-button"><span class="german-button">DE</span><span class="slash-lang">/</span><span>ENG</span></button></div> <!--[!--><!--]--></div> <div class="masonry-container"><!--[--><div class="masonry-item"><a href="https://brandmuster.info"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Brandmuster &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./der-montag"><img class="blur-[3px]" src="assets/proj2-img-cover.jpg" alt="Der Montag" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./shark-island"><img class="blur-[3px]" src="assets/proj3-img-cover.jpg" alt="Shark Island" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="https://russia-eu-cars.airwars.org/"><img class="blur-[3px]" src="assets/proj5-img-cover.jpg" alt="Sanctions, Scams &amp; Deepfakes &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./mind-the-gap"><img class="blur-[3px]" src="assets/proj4-img-cover.jpg" alt="Mind The Gap" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./dutch-airstrikes"><img class="blur-[3px]" src="assets/proj6-img-cover.jpg" alt="Dutch Airstrikes" draggable="false"/> <!--[!--><!--]--></a></div><!--]--></div> <div class="footer"><div class="footer-content"><p class="copyright-text">© 2026 Joel Schülin</p> <p class="typeface-credit">Typeface <a href="https://www.collletttivo.it/typefaces/ronzino" class="underline" target="_blank">RONZINO</a> <span class="typeface-foote-media">designed by Luigi Gorlero, Nunzio MazzaferroRONZINO by Colletttivo</span></p> <p class="up-button"><a href="#header">hoch ↑</a></p></div></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><!----><div id="header"></div> <div class="header-bar"><div class="bar-text"><p class="main-title">Joel Schülin</p> <button class="about">Über mich <!--[!--><!--]--></button> <button class="lang-button"><span class="german-button">DE</span><span class="slash-lang">/</span><span>ENG</span></button></div> <!--[!--><!--]--></div> <div class="masonry-container"><!--[--><div class="masonry-item"><a href="https://brandmuster.info"><img class="blur-[3px]" src="assets/proj1-img-cover.jpg" alt="Brandmuster &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./der-montag"><img class="blur-[3px]" src="assets/proj2-img-cover.jpg" alt="Der Montag" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./shark-island"><img class="blur-[3px]" src="assets/proj3-img-cover.jpg" alt="Shark Island" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="https://russia-eu-cars.airwars.org/"><img class="blur-[3px]" src="assets/proj5-img-cover.jpg" alt="Sanctions, Scams &amp; Deepfakes &lt;span>&amp;#8599&lt;/span>" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./mind-the-gap"><img class="blur-[3px]" src="assets/proj4-img-cover.jpg" alt="Mind The Gap" draggable="false"/> <!--[!--><!--]--></a></div><div class="masonry-item"><a href="./dutch-airstrikes"><img class="blur-[3px]" src="assets/proj6-img-cover.jpg" alt="Dutch Airstrikes" draggable="false"/> <!--[!--><!--]--></a></div><!--]--></div> <div class="footer"><div class="footer-content"><p class="copyright-text">© 2026 Joel Schülin</p> <p class="typeface-credit">Typeface <a href="https://www.collletttivo.it/typefaces/ronzino" class="underline" target="_blank">RONZINO</a> <span class="typeface-foote-media">designed by Luigi Gorlero, Nunzio Mazzaferro by Colletttivo</span></p> <p class="up-button"><a href="#header">hoch ↑</a></p></div></div><!----><!----><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_zk653v = {
+					__sveltekit_1duhzg1 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QbJ3q_9y.js"),
-						import("./_app/immutable/entry/app.K0Ep7xRg.js")
+						import("./_app/immutable/entry/start.BMH2O0k5.js"),
+						import("./_app/immutable/entry/app.BKpeI9UX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
